--- a/web-wall/package.json
+++ b/web-wall/package.json
@@ -8,15 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "1.7.1",
     "next": "12.0.7",
+    "next-redux-saga": "4.1.2",
+    "next-redux-wrapper": "7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "web3": "^1.6.1"
+    "react-redux": "7.2.6",
+    "redux-saga": "1.1.3",
+    "web3": "1.6.1"
   },
   "devDependencies": {
-    "@types/react": "^17.0.38",
+    "@types/react": "17.0.38",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
-    "typescript": "^4.5.4"
+    "typescript": "4.5.4"
   }
 }
